# async-edinet-client

./: .env.example  .gitignore  README.md  example.py  pyproject.toml  sample.py
async_edinet_client/: __init__.py  dependencies.py  edinet_fetch.py  edinet_fetch_doclist.py  edinet_fetch_document.py  utils.py
async_edinet_client/schemas/: doclist.py
edinet_integration/: __init__.py  dependencies.py  doc_processor.py  edinet_fetch.py  edinet_fetch_doclist.py  edinet_fetch_document.py  exceptions.py  utils.py
edinet_integration/schemas/: __init__.py  base.py  doc.py  doclist.py
example_outputs/: document_example.json  filings_daily_example.json  filings_interval_example.json  flat_document_example.csv  flat_filings_example.csv
